syntax = "proto3";
package thingspect.int.message;

import "common/thingspect_datapoint.proto";

option go_package = "github.com/thingspect/atlas/api/go/message";

// ValidatorIn represents a data point and associated metadata as used in message queues.
message ValidatorIn {
  // Data point.
  common.DataPoint point = 1;

  // Organization ID (UUID). May be empty if generated internally (LoRaWAN, etc.).
  string org_id = 2;

  // Authentication has already taken place (API, LoRaWAN, etc.) and token validation can be skipped.
  bool skip_token = 3;
}
